tests/specs/namespace_fn_overloads.txt
# mod.ts
export namespace Namespace {
  export function a(b: string): string;
  export function a(b: number): number;
  export function a(b: number | string): number | string {}
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export namespace Namespace {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   export function a(b: string): string;
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:3
  | 
3 |   export function a(b: number): number;
  |   ^

# output.txt
Defined in file:///mod.ts:0:1

namespace Namespace

  function a(b: string): string
  function a(b: number): number


# output.json
{
  "symbols": [
    {
      "name": "Namespace",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "namespace",
          "def": {
            "elements": [
              {
                "name": "a",
                "declarations": [
                  {
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 1,
                      "col": 2,
                      "byteIndex": 31
                    },
                    "declarationKind": "export",
                    "kind": "function",
                    "def": {
                      "params": [
                        {
                          "kind": "identifier",
                          "name": "b",
                          "optional": false,
                          "tsType": {
                            "repr": "string",
                            "kind": "keyword",
                            "value": "string"
                          }
                        }
                      ],
                      "returnType": {
                        "repr": "string",
                        "kind": "keyword",
                        "value": "string"
                      }
                    }
                  },
                  {
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 2,
                      "col": 2,
                      "byteIndex": 71
                    },
                    "declarationKind": "export",
                    "kind": "function",
                    "def": {
                      "params": [
                        {
                          "kind": "identifier",
                          "name": "b",
                          "optional": false,
                          "tsType": {
                            "repr": "number",
                            "kind": "keyword",
                            "value": "number"
                          }
                        }
                      ],
                      "returnType": {
                        "repr": "number",
                        "kind": "keyword",
                        "value": "number"
                      }
                    }
                  },
                  {
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 3,
                      "col": 2,
                      "byteIndex": 111
                    },
                    "declarationKind": "export",
                    "kind": "function",
                    "def": {
                      "params": [
                        {
                          "kind": "identifier",
                          "name": "b",
                          "optional": false,
                          "tsType": {
                            "kind": "union",
                            "value": [
                              {
                                "repr": "number",
                                "kind": "keyword",
                                "value": "number"
                              },
                              {
                                "repr": "string",
                                "kind": "keyword",
                                "value": "string"
                              }
                            ]
                          }
                        }
                      ],
                      "returnType": {
                        "kind": "union",
                        "value": [
                          {
                            "repr": "number",
                            "kind": "keyword",
                            "value": "number"
                          },
                          {
                            "repr": "string",
                            "kind": "keyword",
                            "value": "string"
                          }
                        ]
                      },
                      "hasBody": true
                    }
                  }
                ]
              }
            ]
          }
        }
      ]
    }
  ]
}
